--- a/WolvenKit/App.xaml
+++ b/WolvenKit/App.xaml
@@ -1,4 +1,4 @@
-﻿<Application x:Class="WolvenKit.App"
+<Application x:Class="WolvenKit.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"          
              xmlns:o="http://schemas.microsoft.com/winfx/2006/xaml/presentation/options"
@@ -32,9 +32,9 @@
                 <Setter Property="Background" Value="Transparent"/>
             </Style>
 
-            <DrawingBrush o:Freeze="True" Opacity="0.5" x:Key="CloudDrawingBrush" RenderOptions.CacheInvalidationThresholdMinimum="0.5" RenderOptions.CacheInvalidationThresholdMaximum="2.0" RenderOptions.CachingHint="Cache" Viewport="0,0,55,55" ViewportUnits="Absolute" Stretch="Uniform" TileMode="Tile">
+            <DrawingBrush o:Freeze="True" Opacity=".1" x:Key="CloudDrawingBrush" RenderOptions.CacheInvalidationThresholdMinimum="0.5" RenderOptions.CacheInvalidationThresholdMaximum="2.0" RenderOptions.CachingHint="Cache" Viewport="0,0,157,157" ViewportUnits="Absolute" Stretch="Uniform" TileMode="Tile">
                 <DrawingBrush.Drawing>
-                    <ImageDrawing o:Freeze="True" ImageSource="pack://application:,,,/Resources/Icons/Cloud.png" Rect="0,0,55,55"/>
+                    <ImageDrawing o:Freeze="True" ImageSource="pack://application:,,,/Resources/Icons/Cloud.png" Rect="0,0,157,157"/>
                 </DrawingBrush.Drawing>
             </DrawingBrush>
 
