--- a/WolvenKit/Views/HomePage/Pages/SettingsPageView.xaml
+++ b/WolvenKit/Views/HomePage/Pages/SettingsPageView.xaml
@@ -1,4 +1,4 @@
-﻿<catel:UserControl x:Class="WolvenKit.Views.HomePage.Pages.SettingsPageView"
+<catel:UserControl x:Class="WolvenKit.Views.HomePage.Pages.SettingsPageView"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"          
                    xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
