--- a/WolvenKit/Views/HomePage/Pages/WebsitePageView.xaml
+++ b/WolvenKit/Views/HomePage/Pages/WebsitePageView.xaml
@@ -1,4 +1,4 @@
-﻿<catel:UserControl x:Class="WolvenKit.Views.HomePage.Pages.WebsitePageView"
+<catel:UserControl x:Class="WolvenKit.Views.HomePage.Pages.WebsitePageView"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                    xmlns:catel="http://schemas.catelproject.com"
@@ -11,7 +11,7 @@
         <Grid Margin="3,75,3,0">
             <hc:TransitioningContentControl TransitionMode="Right2LeftWithFade">
 
-                <wv2:WebView2 Source="https://wolvenkit.red/"/>
+                <wv2:WebView2 Source="https://redmodding.org/"/>
             </hc:TransitioningContentControl>
 
         </Grid>
@@ -38,8 +38,7 @@
 
         <hc:TransitioningContentControl TransitionMode="Right2LeftWithFade">
 
-                <hc:ComboBox HorizontalContentAlignment="Right" x:Name="SelectWebsiteTypeCombo" Background="Transparent"   Margin="0,20,75,0" SelectedIndex="0" HorizontalAlignment="Right" VerticalAlignment="Top" FontSize="20" Height="45">
-            <ComboBoxItem Content="WolvenKit Website"/>
+                <hc:ComboBox HorizontalContentAlignment="Right" Visibility="Visible" x:Name="SelectWebsiteTypeCombo" Background="Transparent"   Margin="0,20,75,0" SelectedIndex="0" HorizontalAlignment="Right" VerticalAlignment="Top" FontSize="20" Height="45">
             <ComboBoxItem Content="Organization Website"/>
         </hc:ComboBox>
 
