--- a/WolvenKit/Views/SettingsPages/IntegrationsSettingsView.xaml
+++ b/WolvenKit/Views/SettingsPages/IntegrationsSettingsView.xaml
@@ -1,16 +1,11 @@
-﻿<catel:UserControl x:Class="WolvenKit.Views.SettingsPages.IntegrationsSettingsView"
+<catel:UserControl x:Class="WolvenKit.Views.SettingsPages.IntegrationsSettingsView"
                    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                    xmlns:catel="http://schemas.catelproject.com" IsVisibleChanged="UserControl_IsVisibleChanged">
 
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
-            <RowDefinition Height="Auto" />
-        </Grid.RowDefinitions>
-        
-        <Label Grid.Row="0" Content="{Binding Title}" />
-        <Label Grid.Row="1" Content="Here goes your real content" />
+        <Label VerticalAlignment="Center" Background="Transparent" BorderBrush="Transparent" FontSize="50" Grid.Row="1" Content="COMING SOON" />
+
     </Grid>
     
 </catel:UserControl>
